[workspace]
resolver = "2"
members = [
  "geo",
  "geo-types",
  "geo-postgis",
  "geo-test-fixtures",
  "jts-test-runner",
  "geo-bool-ops-benches",
]

[patch.crates-io]

# Ensure any transitive dependencies also use the local geo/geo-types
geo = { path = "geo" }
geo-types = { version = "0.7.11", features = [
  "approx",
  "use-rstar_0_11",
], registry = "franklin-ai-geo" }
